fix home page
